# Trae-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt  weather_beijing.py
docs/: index.md
src/trae_ai/: __init__.py  main.py
tests/: test_main.py
